fix about content overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -271,12 +271,6 @@ pre {
   white-space: pre-wrap;
 }
 
-p.aboutText {
-  font-family: var(--font-primary);
-  line-height: 1.5;
-  white-space: pre-wrap;
-}
-
 img {
   box-shadow: 6px 6px 0 var(--foam);
   max-width: 80%;
@@ -625,15 +619,30 @@ footer {
 *                             SECTION STYLES 
 ******************************************************************************/
 
-.sectionContainer {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-  height: auto;
-  justify-content: flex-start;
-  padding: var(--padding-xl);
-  width: 100%;
+@media (min-width: 0px) {
+  .sectionContainer {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: auto;
+    justify-content: flex-start;
+    padding: var(--padding-xs);
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .sectionContainer {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: auto;
+    justify-content: flex-start;
+    padding: var(--padding-lg);
+    width: 100%;
+  }
 }
 
 .dashed-line-lg {
@@ -657,6 +666,23 @@ footer {
 
 .landingContainer {
   min-height: 90vh;
+}
+
+/****************************************************************************** 
+*                             ABOUT STYLES 
+******************************************************************************/
+
+.aboutText p {
+  font-family: var(--font-primary);
+  line-height: 1.5;
+  white-space: pre-wrap;
+}
+
+.aboutText {
+  max-width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 /****************************************************************************** 
